# mercurylayer

./: Cargo.toml  Test.md  docker-compose-lockbox.yml  docker-compose-main.yml  docker-compose-sim-prd.yml  docker-compose-token-lnd-nodes.yml  docker-compose-token-servers.yml  docker-compose-tor.yml  torrc
.github/workflows/: ci.yaml
clients/apps/nodejs/: index.js
clients/apps/rust/: Cargo.toml
clients/apps/rust/src/: main.rs
clients/libs/nodejs/: coin_enum.js
clients/libs/rust/: Cargo.toml
clients/libs/rust/src/: coin_status.rs  deposit.rs  lib.rs  transfer_receiver.rs  transfer_sender.rs
clients/libs/web/: broadcast_backup_tx.js  coin_enum.js  coin_status.js  deposit.js  lightning-latch.js  main.js  storage_manager.js  transfer_receive.js  transfer_send.js  utils.js  withdraw.js
clients/tests/rust/src/: bitcoin_core.rs  main.rs  ta01_sign_second_not_called.rs  ta02_duplicate_deposits.rs  ta02_multiple_deposits.rs  ta03_multiple_deposits.rs  tb01_simple_transfer.rs  tb02_transfer_address_reuse.rs  tb03_simple_atomic_transfer.rs  tb04_simple_lightning_latch.rs  tb05_timelock.rs  temp01.rs  tm01_sender_double_spends.rs  tv01.rs  utils.rs
clients/tests/web/: package-lock.json  package.json  test-utils.js
clients/tests/web/test/: ta02-duplicate-deposits.test.js  ta03_multiple_deposits.test.js  tb01-simple-transfer.test.js  tb03-simple-atomic-transfer.test.js  tb04-simple-lightning-latch.test.js
explorer/: Dockerfile
lib/: Cargo.toml
lib/src/deposit/: mod.rs
lib/src/transfer/: receiver.rs
lib/src/wallet/: mod.rs
lockbox/: .dockerignore  .env  .gitignore  CMakeLists.txt  Dockerfile  README.md  Settings.toml  vcpkg.json
lockbox/cmake/: secp256k1_zkp.cmake
lockbox/include/: db_manager.h  enclave.h  filesystem_key_manager.h  google_key_manager.h  hashicorp_api_key_manager.h  hashicorp_container_key_manager.h  hashicorp_key_manager.h  include_secp256k1_zkp_lib.h  key_manager.h  library.h  server.h  utils.h
lockbox/src/: db_manager.cpp  enclave.cpp  filesystem_key_manager.cpp  google_key_manager.cpp  hashicorp_api_key_manager.cpp  hashicorp_container_key_manager.cpp  hashicorp_key_manager.cpp  key_manager.cpp  library.cpp  main.cpp  server.cpp  utils.cpp
server/: Cargo.toml  Dockerfile  Settings.toml
server/migrations/: 0001_key_data_table.sql
server/src/: main.rs  server_config.rs
server/src/database/: deposit.rs
server/src/endpoints/: deposit.rs
token-server-v2/: Cargo.toml  Dockerfile  Settings.toml
token-server-v2/src/: main.rs  server_config.rs  server_state.rs
token-server-v2/src/endpoints/: token.rs
token-server/src/: server_config.rs
token-server/src/endpoints/: token.rs
wasm/: Cargo.toml
wasm/node_pkg/debug/: mercury_wasm.js
wasm/node_pkg/release/: mercury_wasm.d.ts  mercury_wasm.js
wasm/src/: lib.rs
wasm/web_pkg/debug/: mercury_wasm.js
wasm/web_pkg/release/: mercury_wasm.d.ts  mercury_wasm.js  mercury_wasm_bg.wasm.d.ts
web/: .env  Dockerfile  package-lock.json
web/public/: index.html  manifest.json
web/src/: App.css  App.js
